<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/back_app"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">
        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:layout_weight="5">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/logo_app"
                    android:contentDescription="@string/galileoImage"/>
        </FrameLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:padding="15dp" android:gravity="">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextTextPersonName"
                    android:autofillHints=""
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/user"
                    tools:ignore="LabelFor"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextTextPassword"
                    android:hint="@string/password" android:autofillHints=""/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center">
            <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:id="@+id/button"
                    tools:ignore="NestedWeights"/>
            <Button
                    android:text="@string/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:id="@+id/button2" />
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:text="@string/university"
                android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>